# rvk

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: main.workflow
.github/workflows/: rust.yml
examples/: simple.rs
rvk/: Cargo.toml  README.md
rvk/src/: api.rs  error.rs  lib.rs
rvk_methods/: Cargo.toml  README.md
rvk_methods/examples/: simple.rs
rvk_methods/src/: account.rs  app_widgets.rs  auth.rs  board.rs  database.rs  friends.rs  gifts.rs  groups.rs  leads.rs  lib.rs  likes.rs  market.rs  messages.rs  notes.rs  pages.rs  photos.rs  places.rs  polls.rs  search.rs  secure.rs  storage.rs  users.rs  video.rs
rvk_objects/: Cargo.toml  README.md
rvk_objects/src/: button.rs  gift.rs  lib.rs  market_item.rs  message.rs  page.rs  photo.rs  poll.rs  stats.rs  sticker.rs  user.rs  video.rs
rvk_objects/src/app_widget/: donation.rs  list.rs
src/: api.rs  client.rs  error.rs  lib.rs  methods.rs  objects.rs
src/methods/: account.rs  ads.rs  app_widgets.rs  apps.rs  audio.rs  auth.rs  board.rs  database.rs  docs.rs  fave.rs  friends.rs  gifts.rs  groups.rs  leads.rs  likes.rs  market.rs  messages.rs  mod.rs  newsfeed.rs  notes.rs  notifications.rs  orders.rs  pages.rs  photos.rs  places.rs  polls.rs  search.rs  secure.rs  stats.rs  status.rs  storage.rs  stories.rs  streaming.rs  users.rs  utils.rs  video.rs  wall.rs  widgets.rs
src/objects/: app.rs  attachment.rs  audio.rs  button.rs  clickable_stickers.rs  comment.rs  comment_board.rs  conversation.rs  document.rs  geo.rs  group.rs  link.rs  market_album.rs  market_item.rs  message.rs  mod.rs  note.rs  photo.rs  podcast.rs  poll.rs  post.rs  post_source.rs  privacy.rs  push_settings.rs  story.rs  topic.rs  user.rs  video.rs
src/objects/app_widget/: cover_list.rs  match_.rs  matches.rs  mod.rs  table.rs  text.rs  tiles.rs
tests/: error.rs  main.rs
