[package]
name = "rvk"
version = "0.13.0" # README.md, CHANGELOG.md
authors = ["Artem Varaksa <aymfst@gmail.com>"]
readme = "README.md"
license = "MIT"
description = "Crate for accessing VK (VKontakte) API"
repository = "https://github.com/u32i64/rvk"
keywords = ["vk", "api", "method"]
categories = ["api-bindings"]
edition = "2018"

[dependencies]
heck = "0.3"
reqwest = "0.9"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
failure = "0.1.1"
failure_derive = "0.1.1"
lazy_static = "1.1.0"
