[package]
name = "rvk"
version = "0.21.0" # README.md, CHANGELOG.md
authors = ["Artem Varaksa <artvaraksa@gmail.com>"]
readme = "README.md"
license = "MIT"
description = "Crate for accessing VK (VKontakte) API"
repository = "https://github.com/u32i64/rvk"
keywords = ["vk", "api", "method"]
categories = ["api-bindings"]
edition = "2018"

[dependencies]
heck = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
lazy_static = "1.1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
