[package]
name = "rvk"
version = "0.23.0"
authors = ["Artem Varaksa <artvaraksa@gmail.com>"]
readme = "README.md"
license = "MIT"
description = "Simple crate for accessing VK (VKontakte) API (using `async`/`await`)"
repository = "https://github.com/u32i64/rvk"
keywords = ["vk", "api"]
categories = ["api-bindings"]
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
